--- a/portafolio.html
+++ b/portafolio.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="homework 1: Web Studio Project" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/modern-normalize.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/main.min.css" />
+    <link rel="stylesheet" type="text/css" href="sass/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,13 +18,13 @@
     <header class="page-header">
       <div class="container">
         <nav>
-          <a class="logo" href="index.html">WebStudio</a>
+          <a class="logo" href="index.html">Web<span>Studio</span></a>
           <ul class="links">
-            <li><a class="links__item" href="index.html">Estudio</a></li>
+            <li><a class="links__item" href="index.html">Studio</a></li>
             <li>
               <a class="links__item" href="#">Portafolio</a>
             </li>
-            <li><a class="links__item" href="#">Contactos</a></li>
+            <li><a class="links__item" href="#">Contacts</a></li>
           </ul>
         </nav>
         <ul class="contacts">
@@ -42,8 +42,8 @@
                 xlink:href="./images/icons.svg#icon-telfono-inteligente"
               ></use>
             </svg>
-            <a class="contacts__link" href="tel:+525555296000"
-              >+52 55 5529 6000</a
+            <a class="contacts__link" href="tel:+12127724150"
+              >+1 212-772-4150</a
             >
           </li>
         </ul>
@@ -54,16 +54,16 @@
         <div class="container">
           <ul class="filters">
             <li class="filters__list">
-              <button class="filters__item" type="button">Todo</button>
+              <button class="filters__item" type="button">All</button>
             </li>
             <li class="filters__list">
-              <button class="filters__item" type="button">Sitios-web</button>
+              <button class="filters__item" type="button">Web-sites</button>
             </li>
             <li class="filters__list">
-              <button class="filters__item" type="button">Aplicaciones</button>
+              <button class="filters__item" type="button">Apps</button>
             </li>
             <li class="filters__list">
-              <button class="filters__item" type="button">Diseño</button>
+              <button class="filters__item" type="button">Design</button>
             </li>
             <li class="filters__list">
               <button class="filters__item" type="button">Marketing</button>
@@ -79,15 +79,14 @@
                     alt="Tecnoduck"
                   />
                   <p class="brochure__transition">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
                   </p>
                 </div>
                 <figcaption class="brochure__category">
                   <h3 class="brochure__name">Tecnoduck</h3>
-                  Sitio-web
+                  Website
                 </figcaption>
               </figure>
             </li>
@@ -100,17 +99,16 @@
                     alt="Poster basketball"
                   />
                   <p class="brochure__transition">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
                   </p>
                 </div>
                 <figcaption class="brochure__category">
                   <h3 class="brochure__name">
-                    Póster de Nueva Orleans vs Estrella Dorada
+                    Poster New Orlean vs Golden Star
                   </h3>
-                  Diseño
+                  Design
                 </figcaption>
               </figure>
             </li>
@@ -123,15 +121,14 @@
                     alt="Restaurant Seafood"
                   />
                   <p class="brochure__transition">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
                   </p>
                 </div>
                 <figcaption class="brochure__category">
-                  <h3 class="brochure__name">Restaurante Seafood</h3>
-                  Aplicaciones
+                  <h3 class="brochure__name">Seafood Restaurant</h3>
+                  Apps
                 </figcaption>
               </figure>
             </li>
@@ -144,14 +141,13 @@
                     alt="Project Prime"
                   />
                   <p class="brochure__transition">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
                   </p>
                 </div>
                 <figcaption class="brochure__category">
-                  <h3 class="brochure__name">Proyecto Prime</h3>
+                  <h3 class="brochure__name">Project Prime</h3>
                   Marketing
                 </figcaption>
               </figure>
@@ -165,15 +161,14 @@
                     alt="Project Boxes"
                   />
                   <p class="brochure__transition">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
                   </p>
                 </div>
                 <figcaption class="brochure__category">
-                  <h3 class="brochure__name">Proyecto Cajas</h3>
-                  Aplicaciones
+                  <h3 class="brochure__name">Project Boxes</h3>
+                  Apps
                 </figcaption>
               </figure>
             </li>
@@ -186,17 +181,14 @@
                     alt="monitor"
                   />
                   <p class="brochure__transition">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
                   </p>
                 </div>
                 <figcaption class="brochure__category">
-                  <h3 class="brochure__name">
-                    La inspiración no tiene límites
-                  </h3>
-                  Sitio-web
+                  <h3 class="brochure__name">Inspiration has no Borders</h3>
+                  Web-site
                 </figcaption>
               </figure>
             </li>
@@ -209,15 +201,14 @@
                     alt="magazine"
                   />
                   <p class="brochure__transition">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
                   </p>
                 </div>
                 <figcaption class="brochure__category">
-                  <h3 class="brochure__name">Edición Limitada</h3>
-                  Diseño
+                  <h3 class="brochure__name">Limited Edition</h3>
+                  Design
                 </figcaption>
               </figure>
             </li>
@@ -230,14 +221,13 @@
                     alt="tag"
                   />
                   <p class="brochure__transition">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
                   </p>
                 </div>
                 <figcaption class="brochure__category">
-                  <h3 class="brochure__name">Proyecto LAB</h3>
+                  <h3 class="brochure__name">Project LAB</h3>
                   Marketing
                 </figcaption>
               </figure>
@@ -247,15 +237,14 @@
                 <div class="brochure__description">
                   <img src="images/img-port8.jpg" alt="laptop working" />
                   <p class="brochure__transition">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
                   </p>
                 </div>
                 <figcaption class="brochure__category">
-                  <h3 class="brochure__name">Negocio en Crecimiento</h3>
-                  Aplicaciones
+                  <h3 class="brochure__name">Growing Business</h3>
+                  Apps
                 </figcaption>
               </figure>
             </li>
@@ -266,21 +255,21 @@
     <footer class="page-footer">
       <div class="container">
         <section class="location">
-          <a class="logo" href="#">WebStudio</a>
+          <a class="logo-footer" href="#">Web<span>Studio</span></a>
           <address class="location__address">
-            Calz. Ticomán 500, Ciudad de México, CDMX, México
+            695 Park Ave, NY 10065, USA
           </address>
           <address class="location__contacts">
-            <a class="location__data" href="mailto:info@example.com"
-              >info@example.com</a
+            <a class="location__data" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
-            <a class="location__data" href="tel:+525555296000"
-              >+52 55 5529 6000</a
+            <a class="location__data" href="tel:+12127724150"
+              >+1 212-772-4150</a
             >
           </address>
         </section>
         <section class="networks">
-          <h3 class="networks__text">ENCUENTRENOS EN</h3>
+          <h3 class="networks__text">Find us on</h3>
           <ul class="networks__icons">
             <li class="networks__item">
               <svg class="networks__icon" width="44" height="44">
@@ -307,17 +296,11 @@
         <section class="subscribe">
           <form class="form-footer" name="subscribe-form">
             <label class="form-footer__mail">
-              <h3 class="form-footer__text">
-                SUSCRÍBASE al boletín informativo
-              </h3>
-              <input
-                type="email"
-                name="email"
-                placeholder="Correo electrónico"
-              />
+              <h3 class="form-footer__text">Subscribe to the newsletter</h3>
+              <input type="email" name="email" placeholder="E-mail" />
             </label>
             <button class="form-footer__btn" type="submit">
-              Suscríbase
+              Subscribe
               <svg class="form-footer__icon">
                 <use xlink:href="./images/icons.svg#icon-send"></use>
               </svg>
