--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="homework 1: Web Studio Project" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/modern-normalize.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/main.min.css" />
+    <link rel="stylesheet" type="text/css" href="sass/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,13 +18,13 @@
     <header class="page-header">
       <div class="container">
         <nav>
-          <a class="logo" href="#">WebStudio</a>
+          <a class="logo" href="#">Web<span>Studio</span></a>
           <ul class="links">
-            <li><a class="links__item" href="#">Estudio</a></li>
+            <li><a class="links__item" href="#">Studio</a></li>
             <li>
               <a class="links__item" href="portafolio.html">Portafolio</a>
             </li>
-            <li><a class="links__item" href="#">Contactos</a></li>
+            <li><a class="links__item" href="#">Contacts</a></li>
           </ul>
         </nav>
         <ul class="contacts">
@@ -42,8 +42,8 @@
                 xlink:href="./images/icons.svg#icon-telfono-inteligente"
               ></use>
             </svg>
-            <a class="contacts__link" href="tel:+525555296000"
-              >+52 55 5529 6000</a
+            <a class="contacts__link" href="tel:+12127724150"
+              >+1 212-772-4150</a
             >
           </li>
         </ul>
@@ -52,9 +52,9 @@
     <main>
       <section class="banner">
         <div class="container">
-          <h1 class="title">SOLUCIONES EFICACES PARA <br />SU NEGOCIO</h1>
+          <h1 class="title">EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS</h1>
           <button data-modal-open class="button" type="button">
-            Solicite nuestro servicio
+            Request our service
           </button>
         </div>
       </section>
@@ -64,46 +64,45 @@
             <svg class="descriptions__icon" width="70" height="70">
               <use xlink:href="./images/icons.svg#icon-antena-1"></use>
             </svg>
-            <h3 class="descriptions__title">ATENCIÓN A LOS DETALLES</h3>
+            <h3 class="descriptions__title">ATTENTION TO DETAILS</h3>
             <p class="descriptions__text">
-              Nos adentramos en todos los detalles y procesos de su negocio,
-              para así desarrollar una solución a su medida.
+              We go into all the details and processes of your business to
+              develop a customized solution..
             </p>
           </li>
           <li>
             <svg class="descriptions__icon" width="70" height="70">
               <use xlink:href="./images/icons.svg#icon-reloj-1"></use>
             </svg>
-            <h3 class="descriptions__title">PUNTUALIDAD</h3>
+            <h3 class="descriptions__title">PUNCTUALITY</h3>
             <p class="descriptions__text">
-              Con nosotros, usted puede sentirse seguro y protegido. Un
-              principio importante de la empresa: respetar su tiempo y respetar
-              los plazos acordados.
+              With us, you can feel safe and secure. An important principle of
+              the company: respect your time and deadlines.
             </p>
           </li>
           <li>
             <svg class="descriptions__icon" width="70" height="70">
               <use xlink:href="./images/icons.svg#icon-diagrama-1"></use>
             </svg>
-            <h3 class="descriptions__title">PLANIFICACIÓN</h3>
+            <h3 class="descriptions__title">PLANNING</h3>
             <p class="descriptions__text">
-              Usted podrá observar y participar en cada fase del desarrollo y
-              aplicación de soluciones.
+              You will be able to observe and participate in every phase of
+              solution development and implementation.
             </p>
           </li>
           <li>
             <svg class="descriptions__icon" width="70" height="70">
               <use xlink:href="./images/icons.svg#icon-astronauta-1"></use>
             </svg>
-            <h3 class="descriptions__title">TEGNOLOGÍA MODERNA</h3>
+            <h3 class="descriptions__title">mODERN TECHNOLOGIES</h3>
             <p class="descriptions__text">
-              Usamos herramientas innovadoras para resolver las tareas
-              asignadas. Es hora de simplificar los procesos laborales.
+              We use innovative tools to solve assigned tasks. It's time to
+              simplify work processes.
             </p>
           </li>
         </ul>
         <section class="service">
-          <h2 class="service__title">A qué nos dedicamos</h2>
+          <h2 class="service__title">What we do</h2>
           <ul class="list">
             <li class="list__item">
               <img
@@ -112,7 +111,7 @@
                 alt="persona digitando código"
                 width="370"
               />
-              <h3 class="list__title">APLICACIONES DE ESCRITORIO</h3>
+              <h3 class="list__title">DESKTOP APPS</h3>
             </li>
             <li class="list__item">
               <img
@@ -121,7 +120,7 @@
                 alt="persona digitando código"
                 width="370"
               />
-              <h3 class="list__title">APLICACIONES MÓVILES</h3>
+              <h3 class="list__title">MOBILE APPS</h3>
             </li>
             <li class="list__item">
               <img
@@ -130,14 +129,14 @@
                 alt="persona digitando código"
                 width="370"
               />
-              <h3 class="list__title">SOLUCIONES DE DISEÑO</h3>
+              <h3 class="list__title">DESIGN SOLUTIONS</h3>
             </li>
           </ul>
         </section>
       </div>
       <section class="team">
         <div class="container">
-          <h2 class="team__title">Nuestro Equipo</h2>
+          <h2 class="team__title">Our Team</h2>
           <ul class="cards">
             <li class="cards__item">
               <figure>
@@ -148,8 +147,8 @@
                   style="width: 270px"
                 />
                 <figcaption class="cards__person">
-                  <h3 class="cards__name">Andrés Cubo</h3>
-                  <p>Diseñador de Productos</p>
+                  <h3 class="cards__name">Christopher Walker</h3>
+                  <p>Product Designer</p>
                   <ul class="icons">
                     <li>
                       <svg class="icons__network" width="44" height="44">
@@ -190,8 +189,8 @@
                   style="width: 270px"
                 />
                 <figcaption class="cards__person">
-                  <h3 class="cards__name">Carla Palacios</h3>
-                  <p>Desarrolladora Frontend</p>
+                  <h3 class="cards__name">Kylie Evans</h3>
+                  <p>Frontend Developer</p>
                   <ul class="icons">
                     <li>
                       <svg class="icons__network" width="44" height="44">
@@ -232,7 +231,7 @@
                   style="width: 270px"
                 />
                 <figcaption class="cards__person">
-                  <h3 class="cards__name">Mario Dorado</h3>
+                  <h3 class="cards__name">Ryan Harris</h3>
                   <p>Marketing</p>
                   <ul class="icons">
                     <li>
@@ -274,8 +273,8 @@
                   style="width: 270px"
                 />
                 <figcaption class="cards__person">
-                  <h3 class="cards__name">Pablo Mijangos</h3>
-                  <p>Diseñador IU</p>
+                  <h3 class="cards__name">Tyler Moore</h3>
+                  <p>UI Designer</p>
                   <ul class="icons">
                     <li>
                       <svg class="icons__network" width="44" height="44">
@@ -312,7 +311,7 @@
       </section>
       <section class="clients">
         <div class="container">
-          <h2 class="clients__title">Clientes Regulares</h2>
+          <h2 class="clients__title">Regular Customers</h2>
           <ul class="clients__logo">
             <li>
               <svg class="clients__icon" width="106" height="52.83">
@@ -351,21 +350,21 @@
     <footer class="page-footer">
       <div class="container">
         <section class="location">
-          <a class="logo" href="#">WebStudio</a>
+          <a class="logo-footer" href="#">Web<span>Studio</span></a>
           <address class="location__address">
-            Calz. Ticomán 500, Ciudad de México, CDMX, México
+            695 Park Ave, NY 10065, USA
           </address>
           <address class="location__contacts">
-            <a class="location__data" href="mailto:info@example.com"
-              >info@example.com</a
+            <a class="location__data" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
-            <a class="location__data" href="tel:+525555296000"
-              >+52 55 5529 6000</a
+            <a class="location__data" href="tel:+12127724150"
+              >+1 212-772-4150</a
             >
           </address>
         </section>
         <section class="networks">
-          <h3 class="networks__text">ENCUENTRENOS EN</h3>
+          <h3 class="networks__text">Find us on</h3>
           <ul class="networks__icons">
             <li class="networks__item">
               <svg class="networks__icon" width="44" height="44">
@@ -392,17 +391,11 @@
         <section class="subscribe">
           <form class="form-footer" name="subscribe-form">
             <label class="form-footer__mail">
-              <h3 class="form-footer__text">
-                SUSCRÍBASE al boletín informativo
-              </h3>
-              <input
-                type="email"
-                name="email"
-                placeholder="Correo electrónico"
-              />
+              <h3 class="form-footer__text">Subscribe to the newsletter</h3>
+              <input type="email" name="email" placeholder="E-mail" />
             </label>
             <button class="form-footer__btn" type="submit">
-              Suscríbase
+              Subscribe
               <svg class="form-footer__icon">
                 <use xlink:href="./images/icons.svg#icon-send"></use>
               </svg>
@@ -414,18 +407,18 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <h3 class="modal__title">
-          Deje sus datos, nos contactaremos con usted
+          Leave your information and we'll call you back
         </h3>
         <form class="modal__form" name="modal-form" autocomplete="on">
           <label class="modal__user">
-            Nombre
+            Name
             <input class="modal__info" type="text" name="name" autofocus />
             <svg class="modal__icon" width="12" height="12">
               <use xlink:href="./images/icons.svg#icon-person-modal"></use>
             </svg>
           </label>
           <label class="modal__user">
-            Teléfono
+            Telephone
             <input class="modal__info" type="tel" name="phone" />
             <svg class="modal__icon" width="13" height="13">
               <use xlink:href="./images/icons.svg#icon-phone-modal"></use>
@@ -439,11 +432,11 @@
             </svg>
           </label>
           <label class="modal__comments">
-            Comentarios
+            Comments
             <textarea
               class="modal__textarea"
               name="comments"
-              placeholder="Introduzca el texto"
+              placeholder="Enter the text"
             ></textarea>
           </label>
           <label class="modal__agree">
@@ -460,11 +453,10 @@
               <use xlink:href="./images/icons.svg#icon-check"></use>
             </svg>
             <p class="modal__text">
-              Estoy de acuerdo con el boletín informativo y acepto los Términos
-              y Condiciones
+              I agree with the letter and accept the <a href="#">Terms and Conditions</a></p>
             </p>
           </label>
-          <button class="modal__button" type="submit">Enviar</button>
+          <button class="modal__button" type="submit">Send</button>
         </form>
         <button class="modal__exit" data-modal-close>
           <svg class="modal__exit-icon" width="18" height="18">
