--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
       <section class="banner">
         <div class="container">
-          <h1 class="title">EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS</h1>
+          <h1 class="title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
           <button data-modal-open class="button" type="button">
             Request our service
           </button>
