--- a/index.html
+++ b/index.html
@@ -142,9 +142,10 @@
               <figure>
                 <img
                   class="cards__img"
-                  src="images/image-3.jpg"
+                  srcset="images/image-3-phone.jpg 450w, images/image-3-tablet.jpg 354w, images/image-3.jpg 270w"
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
+                  src="images/image-3-phone.jpg"
                   alt="Andrés Cubo"
-                  style="width: 270px"
                 />
                 <figcaption class="cards__person">
                   <h3 class="cards__name">Christopher Walker</h3>
@@ -184,9 +185,10 @@
               <figure>
                 <img
                   class="cards__img"
-                  src="images/image-4.jpg"
+                  srcset="images/image-4-phone.jpg 450w, images/image-4-tablet.jpg 354w, images/image-4.jpg 270w"
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
+                  src="images/image-4-phone.jpg"
                   alt="Carla Palacios"
-                  style="width: 270px"
                 />
                 <figcaption class="cards__person">
                   <h3 class="cards__name">Kylie Evans</h3>
@@ -226,9 +228,10 @@
               <figure>
                 <img
                   class="cards__img"
-                  src="images/image-5.jpg"
+                  srcset="images/image-5-phone.jpg 450w, images/image-5-tablet.jpg 354w, images/image-5.jpg 270w"
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
+                  src="images/image-5-phone.jpg"
                   alt="Mario Dorado"
-                  style="width: 270px"
                 />
                 <figcaption class="cards__person">
                   <h3 class="cards__name">Ryan Harris</h3>
@@ -268,9 +271,10 @@
               <figure>
                 <img
                   class="cards__img"
-                  src="images/image-6.jpg"
+                  srcset="images/image-6-phone.jpg 450w, images/image-6-tablet.jpg 354w, images/image-6.jpg 270w"
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
+                  src="images/image-6-phone.jpg"
                   alt="Pablo Mijangos"
-                  style="width: 270px"
                 />
                 <figcaption class="cards__person">
                   <h3 class="cards__name">Tyler Moore</h3>
