--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
               <figure>
                 <img
                   class="cards__img"
-                  srcset="images/image-3-phone.jpg 450w, images/image-3-tablet.jpg 354w, images/image-3.jpg 810w"
-                  src="images/image-3-phone.jpg"
+                  srcset="images/image-3-450.jpg 450w, images/image-3-354.jpg 354w, images/image-3-270.jpg 270w"
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
+                  src="images/image-3-450.jpg"
                   alt="Andrés Cubo"
                 />
                 <figcaption class="cards__person">
@@ -184,7 +185,7 @@
               <figure>
                 <img
                   class="cards__img"
-                  srcset="images/image-4-phone.jpg 450w, images/image-4-tablet.jpg 354w, images/image-4.jpg 270w"
+                  srcset="images/image-4-450.jpg 450w, images/image-4-354.jpg 354w, images/image-4-270.jpg 270w"
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   src="images/image-4-phone.jpg"
                   alt="Carla Palacios"
@@ -227,7 +228,7 @@
               <figure>
                 <img
                   class="cards__img"
-                  srcset="images/image-5-phone.jpg 450w, images/image-5-tablet.jpg 354w, images/image-5.jpg 270w"
+                  srcset="images/image-5-450.jpg 450w, images/image-5-354.jpg 354w, images/image-5-270.jpg 270w"
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   src="images/image-5-phone.jpg"
                   alt="Mario Dorado"
@@ -270,7 +271,7 @@
               <figure>
                 <img
                   class="cards__img"
-                  srcset="images/image-6-phone.jpg 450w, images/image-6-tablet.jpg 354w, images/image-6.jpg 270w"
+                  srcset="images/image-6-450.jpg 450w, images/image-6-354.jpg 354w, images/image-6-270.jpg 270w"
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   src="images/image-6-phone.jpg"
                   alt="Pablo Mijangos"
@@ -317,32 +318,32 @@
           <h2 class="clients__title">Regular Customers</h2>
           <ul class="clients__logo">
             <li>
-              <svg class="clients__icon" width="106" height="52.83">
+              <svg class="clients__icon" width="106" height="60">
                 <use xlink:href="./images/icons.svg#icon-Logo"></use>
               </svg>
             </li>
             <li>
-              <svg class="clients__icon" width="106" height="52.83">
+              <svg class="clients__icon" width="106" height="60">
                 <use xlink:href="./images/icons.svg#icon-Logo1"></use>
               </svg>
             </li>
             <li>
-              <svg class="clients__icon" width="106" height="52.83">
+              <svg class="clients__icon" width="106" height="60">
                 <use xlink:href="./images/icons.svg#icon-Logo2"></use>
               </svg>
             </li>
             <li>
-              <svg class="clients__icon" width="106" height="52.83">
+              <svg class="clients__icon" width="106" height="60">
                 <use xlink:href="./images/icons.svg#icon-Logo3"></use>
               </svg>
             </li>
             <li>
-              <svg class="clients__icon" width="106" height="52.83">
+              <svg class="clients__icon" width="106" height="60">
                 <use xlink:href="./images/icons.svg#icon-Logo4"></use>
               </svg>
             </li>
             <li>
-              <svg class="clients__icon" width="106" height="52.83">
+              <svg class="clients__icon" width="106" height="60">
                 <use xlink:href="./images/icons.svg#icon-Logo5"></use>
               </svg>
             </li>
