--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             </label>
             <button class="form-footer__btn" type="submit">
               Subscribe
-              <svg class="form-footer__icon">
+              <svg class="form-footer__icon" width="24px" heigth="24px">
                 <use xlink:href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
