--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       <div class="container">
         <nav>
           <a class="logo" href="#">Web<span>Studio</span></a>
+          <button
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu">
+            <svg width="24" height="24">
+              <use xlink:href="./images/icons.svg#icon-menu_40px"></use>
+            </svg>
+          </button>
+
           <ul class="links">
             <li><a class="links__item" href="#">Studio</a></li>
             <li>
