--- a/index.html
+++ b/index.html
@@ -509,6 +509,22 @@
             <li><a href="index.html" class="link">Contacts</a></li>
           </ul>
         </nav>
+        <div class="mobile-menu__contacts">
+          <address>
+            <a class="mobile-menu__phone" href="tel:+12127724150"
+              >+1 212-772-4150</a
+            >
+            <a class="mobile-menu__mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </address>
+          <ul class="list-networks">
+            <li>Instagram</li>
+            <li>Twitter</li>
+            <li>Facebook</li>
+            <li>LinkenIn</li>
+          </ul>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
