--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="homework 8: Web Studio Project" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/modern-normalize.min.css" />
-    <link rel="stylesheet" type="text/css" href="sass/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
